# formatmydrive-pascal

./: CMakeLists.txt  FormatMyDrive.lpi  FormatMyDrive.lps  FormatMyDrive.pas  README.md  about.lfm  about.pas  contributors.txt  fmtmydrv.cxx  form_info.lfm  form_info.pas  icons.cxx  icons.hpp  mainprogram.lfm  mainprogram.pas  program.cxx  program.hpp  udev.cxx  udev.hpp  udev.pas  window.cxx  window.hpp
bitmaps/: makeicon.sh
c_in/: compile.sh  udev.c  udev.h
